@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}
class Organization{
    name
}

class HRM{
    name
    email
    phone number
    identification document
}

class VFM{
    name
    email
    phone number
    identification document
}

class GSM{
    name
    email
    phone number
    identification document
}

class GSU{
    name
}


class Skill{
    name
}

class Job{
    name
    necessary skills
}

class Collaborator{
    name,
    birth Details,
    admisison date,
    address,
    phoneNumber,
    email,
    taxPayer Document,
    identification Document,
    job
}

class Team{
collaborators
skills needed
}

class GreenSpaces {
type
area
address
name
 GSM email
}

class Task{
    name
    urgency
    expected duration
    status
}

class Vehicle{
    Brand
    Model
    Type
    Tare Weight
    Gross Weight
    Current Km
    Register Date
    Acquisition Date
    Maintenance/Check-up Frequency
}

class VehiclesMaintenance{
    distance "km"
}


class ToDoList{
    task description
    urgency
    expected duration
}

class Agenda{
    entries
    team
    vehicles/equipment
    expected duration
    status
}

class Entry{
    task
    date
    time
    description
    state
}

Organization -- "*" HRM : is a part of <
Organization -- "*" VFM : is a part of <
Organization -- "*" GSM : is a part of <
Organization -- "*" GSU : is a part of <
Organization -- Vehicle : owns >
HRM "1" -- "*" Skill : registers >
HRM "1" -- "*" Job : registers >
HRM "1" -- "*" Collaborator : registers >
Collaborator "1" -- "*" Skill : has a set of >
Collaborator "1" -- "1" Job : has >
Collaborator "1" -- "1" Team : belongs to >
GreenSpaces "0..1" -- "1" Task : is assigned to <
Task "1" -- "*" Entry : is included in >
Team "1" -- "*" Entry : is assigned a >
VFM "1" -- "*" Vehicle : registers >
VFM "1" -- "*" "VehiclesMaintenance" : registers >
Vehicle "1" -- "0..1" "VehiclesMaintenance" : needs >
VFM "1" -- "1" CheckupList : registers >
Team "1" -- "0..*" Vehicle : needs >
GSM "1" -- "*" ToDoList : has >
GSM "1" -- "*" GreenSpaces : creates and manages >
ToDoList "1" -- "*" Task : includes >
Agenda "1" -- "*" Entry : schedules >
Agenda "1" -- "*" Team : is assigned <

@enduml
